--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<h1><a href="index.html">Code Me</a></h1>
 						<nav>
-							<a href="#menu">Explore</a>
+							<a href="#menu">Menu</a>
 						</nav>
 					</header>
 
@@ -45,7 +45,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-envelope"></span></div>
 							<h2>This is Code Black</h2>
-							<p>Creativity on a Whole New Level <a href="http://html5up.net">HTML5 UP</a></p>
+							<p>Creativity on a Whole New Level <a href="#">Check This</a></p>
 						</div>
 					</section>
 
@@ -55,7 +55,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images\chalk-chalkboard-close-up-415068.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images\blogging-desk-notebook-34658.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Portfolio</h2>
 										<p>
@@ -69,10 +69,10 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images\chalk-chalkboard-close-up-415068.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">Our Mission</h2>
+										<p>AS a Company we are here to bring our customers and clients the best of quality. We strive to have everyone with grand satisfaction. If you are looking for dedicated individuals who are passionate about what they do, look no further; you found them. Click the learn more to see our full mission statement and future goals for our company!</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -81,11 +81,11 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images\code-ninja-DThlV4dYlnE-unsplash.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Meet the Team</h2>
+										<p>Do you want to get to know the people who will be handling your needs? Here you can get a closer look at our team and get a little more personable with them. Here you can jump on their contacts list for some simple Q&A concerning their abilities and skills. Take a look and even join our weekly email chain for updates and improvements.</p>
+										<a href="#" class="special">Discover</a>
 									</div>
 								</div>
 							</section>
@@ -93,31 +93,31 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<h2 class="major">Our Services</h2>
+									<p>We have a wide variety of skillsets and talents. Below is a few of them that we specialize in, and is the primary reason we are the company that we've become. Take some time to research our services and what is inclusive to them.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images\christopher-gower-m_HRfLhgABo-unsplash.jpg" alt="" /></a>
+											<h3 class="major">Coding/Programming</h3>
+											<p>Writing Code and creating programs of all sorts in order to meet personal and business needs.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images\mika-baumeister-Wpnoqo2plFA-unsplash.jpg" alt="" /></a>
+											<h3 class="major">Database</h3>
+											<p>Manage and monitor datbases in order to keep information and data secure and available to you company or organization.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images\cyber-security-cybersecurity-device-60504.jpg" alt="" /></a>
+											<h3 class="major">Security</h3>
+											<p>Using Security tools and applications to maintain the upmost level of physical and cyber-security to protect business globally.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="image"><img src="images\jacob-miller-ot5kWZkH97s-unsplash.jpg" alt="" /></a>
+											<h3 class="major">Backup and storage</h3>
+											<p>Using cloud storage with fault tolerance to ensure data will be safe and available, and accessible.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 									</section>
@@ -133,7 +133,7 @@
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+							<p>In need of any questions or concerns please feel free to drop it below. Please be very decriptive and thorough as we would like to answer all question and/or requests with efficiency in a timely manner.</p>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
@@ -155,15 +155,15 @@
 							</form>
 							<ul class="contact">
 								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
+									Code Me LLC.<br />
+									2207 Programmed Road Suite #0810<br />
+									Bullseye, DE 00000-0000
 								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								<li class="icon solid fa-phone">(555) 123-4567</li>
+								<li class="icon solid fa-envelope"><a href="#">CodeMe@Google.com</a></li>
+								<li class="icon brands fa-twitter"><a href="#">twitter.com/CodeME.Dot</a></li>
+								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/CodeMe.Dot</a></li>
+								<li class="icon brands fa-instagram"><a href="#">instagram.com/CodeME.Dot</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
